@@ -1,3 +1,7 @@
+2008-02-29  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Fixed bug #7975: Unskinnable icons because of hardcoded html (Thanks to Steffen Kamper)
+
 2008-04-01  Michael Stucki  <michael@typo3.org>
 
 	* Fixed bug #7841: Remove COLLATE statement when creating new tables with the Install Tool
